components/wordpress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      securityContext:
        fsGroup: 33
#
#      initContainers:
#        - name: init-wordpress
#          image: wordpress:cli-2.7.1
#          command: ['sh', '-c', '/var/www/html/init-scripts/init.sh']
#          env:
#          - name: WORDPRESS_DB_HOST
#            value: mysql-0.mysql.mysql.svc
#          - name: WORDPRESS_DB_USER
#            value: root
#          - name: WORDPRESS_DB_PASSWORD
#            valueFrom:
#              secretKeyRef:
#                name: mysql-pass
#                key: password
#          - name: WORDPRESS_DB_NAME
#            value: wordpress
#          - name: WORDPRESS_THEME
#            value: twentytwentytwo
#          - name: WORDPRESS_PLUGINS
#            value: "performance-lab contact-form-7"
#          securityContext:
#            runAsUser: 0
#          volumeMounts:
#          - name: wordpress-persistent-storage
#            mountPath: /var/www/html
#          - name: init-scripts
#            mountPath: /var/www/html/init-scripts
      containers:
      - image: wordpress:6.1.1-apache
        name: wordpress
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      - name: wp-cli
        image: wordpress:cli-2.7.1
        command: ['sh', '-c', 'tail -f /dev/null']
        securityContext:
          runAsUser: 0
        volumeMounts:
          - name: wordpress-persistent-storage
            mountPath: /var/www/html
          - name: init-scripts
            mountPath: /var/www/html/init-scripts
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
      - name: init-scripts
        configMap:
          name: init-script
          defaultMode: 0777
